--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,20 @@
 
 body {
   margin: 0;
+  line-height: 150%;
+  word-spacing: 5px;
   font-family: 'Lato', sans-serif;
+  font-size: 110%;
+  color: #232323;
 }
 
-
+/*-------------------------------------------------------------------------------*/
 
 header {
   height: 100vh;
-
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/header-back.jpeg");
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header-back.jpeg");
   background-size: cover;
   background-position: center;
-
 }
 
 .container {
@@ -24,18 +26,14 @@ header {
   margin: 0 auto;
 }
 
-.logo {
-  width: 20%;
-}
+.logo { width: 20%; }
 
 .logo img {
   width: 130px;
   margin-top: 10px;
 }
 
-.main-navigation {
-  display: flex;
-}
+.main-navigation { display: flex; }
 
 .menu {
   width: 80%;
@@ -64,18 +62,15 @@ header {
   border-bottom: 1px solid #ff9e28;
 }
 
-.menu-item a:focus {
-  outline: none;
-}
+.menu-item a:focus { outline: none; }
 
-.heading {
-  margin-top: 100px;
-}
+.heading { margin-top: 100px; }
 
 h1 {
   text-transform: uppercase;
-  font-weight: normal;
+  font-weight: 300;
   line-height: 110%;
+  font-family: 'Josefin Sans', sans-serif;
   color: #fff;
 }
 
@@ -83,9 +78,9 @@ h1 span {
   margin-left: 50px;
   font-size: 120%;
 }
-.heading .btn {
-  margin-top: 20px;
-}
+
+.heading .btn { margin-top: 20px; }
+
 .btn {
   width: 130px;
   height: 40px;
@@ -106,6 +101,51 @@ h1 span {
   color: #fff;
   background: #cc6f00;
 }
-.btn:focus {
-  outline: none;
+
+.btn:focus { outline: none; }
+/*-----------------------------------------------------------------------------*/
+/*Features*/
+/*------------------------------------------------------------------------------*/
+.title {
+  margin-top: 70px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  word-spacing: 7px;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.title::after {
+  display:inline-block;
+  width: 80px;
+  margin-bottom: 30px;
+  border-bottom: 2px solid #ff9e28;
+  content: "";
+}
+
+.service-description {
+  width: 75%;
+  margin: 0 auto 40px;
+  text-align: center;
+}
+
+.features {
+  display: flex;
+  margin: 0 -2%;
+}
+
+.feature-description {
+  width: 22%;
+  margin: 0 2%;
+}
+
+.feature-description .fa {
+  font-size: 35px;
+  color: #ff9e28;
+}
+
+.feature-description h3 {
+  margin-top: 10px;
+  font-size: 120%;
+  font-family: 'Josefin Sans', sans-serif;
 }
