Create style for 'Subscription' section

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h1 span {
 .btn {
   width: 130px;
   height: 40px;
-  border: 1px solid #9e5600;
+  border: 1px solid #cc6f00;
   border-radius: 30px;
   background: transparent;
   color: #d87200;
@@ -94,7 +94,7 @@ h1 span {
 
 .btn-full {
   color: #fff;
-  background: #e08618;
+  background: #ff9e28;
 }
 
 .btn:hover {
@@ -248,6 +248,10 @@ h3 {
 
 .black-box a:hover { color: #ff9e28; }
 
+.city-description {
+  font-size: 90%;
+}
+
 .city .fa {
   font-size: 120%;
   color: #ff9e28;
@@ -322,4 +326,45 @@ h3 {
     left: 100px;
     bottom: 35px;
   white-space: nowrap;
+}
+/*-----------------------------------------------------------------------------*/
+/*Price-plans*/
+/*------------------------------------------------------------------------------*/
+.subscription {
+  padding-bottom: 50px;
+  background: #e8e8e8;
+}
+
+.price-plan {
+  width: 30%;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 20px #909090;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.price {
+  margin: 0;
+  font-size: 50px;
+  color: #ff9e28;
+}
+
+.price span { font-size: 20px; }
+
+.price-description {
+  margin: 0 -20px;
+  padding: 20px;
+  border-top: 1px solid #dedede;
+  border-bottom: 1px solid #dedede;
+  background: rgba(255, 255, 255, 0.8);
+  font-size: 90%;
+  word-spacing: 3px;
+}
+
+.price-description .fa { color: #ff9e28; }
+
+.price-plan .btn {
+  display: block;
+  margin: 20px auto 0;
 }
