--- a/css/style.css
+++ b/css/style.css
@@ -368,3 +368,46 @@ h3 {
   display: block;
   margin: 20px auto 0;
 }
+/*-------------------------------------------------------------------------------*/
+/*Form*/
+/*--------------------------------------------------------------------------------*/
+.email-form {
+  width: 30%;
+  margin: 0 auto;
+}
+
+input,
+select,
+textarea {
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 120%;
+  font-family: 'Lato', sans-serif;
+  border: 1px solid #ff9e28;
+  transition: all .3s;
+}
+
+input:focus,
+select:focus,
+textarea:focus {
+  outline: none;
+  box-shadow: 0.2px 0.2px 5px #ff9e28, -.2px -.2px 5px #ff9e28;
+}
+
+select {
+  background: none;
+}
+
+input[type="checkbox"] {
+  width: 10%;
+}
+
+input[type="checkbox"]:focus {
+  box-shadow: none;
+}
+
+.email-form .btn {
+  display: block;
+  margin: 0 auto;
+}
