Fix menu icon position

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ header {
   margin: 0 auto;
 }
 
+.main-navigation { display: flex; }
+
 .logo { width: 20%; }
 
 .logo img {
@@ -37,10 +39,10 @@ header {
 }
 
 .menu-icon {
-  width: 60px;
+  width: 40px;
   height: 45px;
   position: relative;
-  /*margin: 50px auto;*/
+  margin: 35px 10px auto auto;
   transform: rotate(0deg);
   transition: .5s ease-in-out;
   cursor: pointer;
@@ -49,9 +51,9 @@ header {
 .menu-icon span {
   display: block;
   position: absolute;
-  height: 9px;
+  height: 3px;
   width: 100%;
-  background: #d3531a;
+  background: #fff;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -64,11 +66,11 @@ header {
 }
 
 .menu-icon span:nth-child(2),.menu-icon span:nth-child(3) {
-  top: 18px;
+  top: 13px;
 }
 
 .menu-icon span:nth-child(4) {
-  top: 36px;
+  top: 26px;
 }
 
 .menu-icon.open span:nth-child(1) {
