--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ body {
   font-size: 110%;
   color: #232323;
 }
-
+/*------------------------------------------------------------------------------*/
+/*HEADER*/
 /*-------------------------------------------------------------------------------*/
 header {
   height: 100vh;
@@ -43,7 +44,9 @@ header {
   width: 80px;
   margin: 0 auto;
 }
-
+/*---------------------------------------------------------------------------------*/
+/*Menu*/
+/*--------------------------------------------------------------------------------*/
 .menu-icon {
   width: 40px;
   height: 45px;
@@ -127,7 +130,9 @@ header {
 }
 
 .menu-item a:focus { outline: none; }
-
+/*--------------------------------------------------------------------------------*/
+/*Heading*/
+/*-------------------------------------------------------------------------------*/
 .heading { margin-top: 120px; }
 
 h1 {
@@ -142,7 +147,9 @@ h1 {
 h1 span {
   font-size: 120%;
 }
-
+/*-----------------------------------------------------------------------------*/
+/*Buttons*/
+/*------------------------------------------------------------------------------*/
 .heading .btn { margin-top: 20px; }
 
 .btn {
@@ -168,9 +175,46 @@ h1 span {
 }
 
 .btn:focus { outline: none; }
+/*-------------------------------------------------------------------------------*/
+/*ABOUT*/
+/*-------------------------------------------------------------------------------*/
+.title {
+  padding-top: 40px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 3px;
+  word-spacing: 7px;
+  font-size: 75%;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.title::after {
+  display:inline-block;
+  width: 80px;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #ff9e28;
+  content: "";
+}
+
+.feature-description .fa {
+  margin-top: 10px;
+  font-size: 35px;
+  color: #ff9e28;
+}
+
+h3 {
+  margin-bottom: 5px;
+  text-transform: uppercase;
+  font-size: 105%;
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.feature-description p {
+  margin-top: 0;
+}
 
 /*-----------------------------------------------------------------------------*/
-/*Food photos*/
+/*FOOD PHOTOS*/
 /*------------------------------------------------------------------------------*/
 .food-photos {
   max-width: 1300px;
