--- a/css/style.css
+++ b/css/style.css
@@ -281,8 +281,67 @@ h3 {
   transition: transform .3s;
 }
 
-.mobile-app img:hover {
-  transform: scale(1.15);
-}
+.mobile-app img:hover { transform: scale(1.15); }
 
 .mobile-app:first-of-type { margin-left: 90px; }
+/*---------------------------------------------------------------------------------*/
+/*CITIES*/
+/*----------------------------------------------------------------------------------*/
+.cities {
+  padding-bottom: 20px;
+}
+.city {
+  width: 90%;
+  height: 300px;
+  margin: 0 auto;
+  box-shadow: 2px 2px 20px #000;
+}
+
+.black-box {
+  margin-top: 30px;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+}
+
+.black-box a {
+  color: #fff;
+  transition: color .2s;
+}
+
+.black-box a:hover { color: #ff9e28; }
+
+.city-description {
+  font-size: 90%;
+}
+
+.city .fa {
+  font-size: 120%;
+  color: #ff9e28;
+}
+
+.fa-user { margin: 0 2px; }
+
+.lisbon-city {
+  background: url(../img/lisbon.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.sf-city {
+  background: url(../img/san-francisco.jpg);
+  background-size: cover;
+  background-position: left;
+}
+
+.berlin-city {
+  background: url(../img/berlin.jpg);
+  background-size: cover;
+  background-position: left;
+}
+
+.london-city {
+  background: url(../img/london.jpg);
+  background-size: cover;
+  background-position: center;
+}
