--- a/css/style.css
+++ b/css/style.css
@@ -345,3 +345,46 @@ h3 {
   background-size: cover;
   background-position: center;
 }
+/*-------------------------------------------------------------------------------*/
+/*TESTIMONIALS*/
+/*-------------------------------------------------------------------------------*/
+.testimonials {
+  padding-bottom: 5px;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url("../img/testimonials-back.jpg");
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+}
+
+.review::before {
+  position: absolute;
+    top: 5px;
+    left: -25px;
+  content: "\201C";
+  font-size: 100px;
+}
+
+.review {
+  position: relative;
+  /*height: 270px;*/
+  width: 90%;
+  margin: 0 auto 40px;
+  font-style: italic;
+}
+
+.author {
+  margin-bottom: 10px;
+}
+
+.author img {
+  width: 80px;
+  border-radius: 50%;
+}
+
+.author span {
+  position: absolute;
+    left: 100px;
+    bottom: 35px;
+  white-space: nowrap;
+}
