--- a/css/style.css
+++ b/css/style.css
@@ -388,3 +388,44 @@ h3 {
     bottom: 35px;
   white-space: nowrap;
 }
+/*-----------------------------------------------------------------------------*/
+/*PRICE PLANS*/
+/*------------------------------------------------------------------------------*/
+.subscription {
+  padding-bottom: 50px;
+  background: #e8e8e8;
+}
+
+.price-plan {
+  width: 95%;
+  margin: 15px auto;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 20px #909090;
+  background: rgba(255, 255, 255, 0.7);
+}
+
+.price {
+  margin: 0;
+  font-size: 50px;
+  color: #ff9e28;
+}
+
+.price span { font-size: 20px; }
+
+.price-description {
+  margin: 0 -20px;
+  padding: 20px;
+  border-top: 1px solid #dedede;
+  border-bottom: 1px solid #dedede;
+  background: rgba(255, 255, 255, 0.8);
+  font-size: 90%;
+  word-spacing: 3px;
+}
+
+.price-description .fa { color: #ff9e28; }
+
+.price-plan .btn {
+  display: block;
+  margin: 20px auto 0;
+}
