--- a/css/style.css
+++ b/css/style.css
@@ -444,29 +444,24 @@ textarea {
   width: 100%;
   margin-bottom: 20px;
   padding: 10px;
+  border: 0;
+  border-radius: 1px;
   font-size: 120%;
   font-family: 'Lato', sans-serif;
-  border: 1px solid #ff9e28;
   transition: all .3s;
+  box-shadow: inset 0px 1px 1px white, 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 input:focus,
 select:focus,
 textarea:focus {
   outline: none;
-  box-shadow: 0.2px 0.2px 5px #ff9e28, -.2px -.2px 5px #ff9e28;
+  box-shadow: inset 0px 1px 10px white, 0px 1px 10px rgba(0, 0, 0, 0.5);
 }
 
 select {
   background: none;
-}
-
-input[type="checkbox"] {
-  width: 10%;
-}
-
-input[type="checkbox"]:focus {
-  box-shadow: none;
+  appearance: none;
 }
 
 .email-form .btn {
