--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ header {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
-  transition: color .2s;
+  transition: all .2s;
 }
 
 .menu-item a:hover {
@@ -594,7 +594,7 @@ select {
   .mobile-app img { width: 120px; }
 }
 /**********************************************************************************/
-/*DEVICES from 700px to px*/
+/*DEVICES from 700px to 829px*/
 /**********************************************************************************/
 @media only screen and (min-width: 700px) {
 
@@ -615,5 +615,89 @@ select {
   .contacts {
     width: 70%;
     margin: 0 auto;
+  }
+}
+
+/**********************************************************************************/
+/*DEVICES from 830px to px*/
+/**********************************************************************************/
+@media only screen and (min-width: 830px) {
+
+  /*.menu-icon { display: none; }
+  .menu { display: block; }
+
+  .logo {
+    top: 0;
+    left: 0;
+  }
+
+  .logo img {
+    width: 130px;
+    margin-top: 10px;
+  }
+
+  .main-navigation { display: flex; }
+
+  .menu {
+    width: 80%;
+    text-align: right;
+
+  }
+
+  .menu-item {
+    display: inline-block;
+    padding: 5px 15px;
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+
+  .menu-item a {
+    padding: 15px 0;
+    border-bottom: 2px solid transparent;
+  }
+
+  .menu-item a:hover {
+    border-bottom: 1px solid #ff9e28;
+  }*/
+  .boxes {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .service-description {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .feature-description {
+    width: 40%;
+    margin: 0 auto;
+  }
+
+  .iphone-img,
+  .step-list {
+    width: 45%;
+    margin: 0 auto;
+  }
+
+  .iphone-img img {
+    width: 70%;
+    float: right;
+  }
+
+  .step span { left: -35%; }
+  .mobile-app { margin-left: 90px; }
+
+  .city {
+    width: 70%;
+    margin: 30px auto;
+  }
+
+  .review { width: 70%; }
+
+  .price-plan {
+    width: 50%;
+    margin: 25px 25%;
   }
 }
