--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 /*-------------------------------------------------------------------------------*/
 header {
   height: 100vh;
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../img/header-back.jpeg");
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
   background-size: cover;
   background-position: center;
 }
@@ -35,6 +35,7 @@ header {
 }
 
 .logo {
+  display: none;
   width: 20%;
   position: absolute;
     top: 350px;
@@ -238,7 +239,7 @@ h3 {
 .meal-img img {
   display: block;
   width: 100%;
-  opacity: 0.3;
+  opacity: 0.5;
   transform: scale(1.15);
   transition: all .5s;
 }
@@ -273,7 +274,7 @@ h3 {
 .step span {
   position: absolute;
     top: 10%;
-    left: -30%;
+    left: -65px;
   padding: 10px 18px 15px;
   border: 2px solid #ff9e28;
   border-radius: 50%;
@@ -583,6 +584,7 @@ select {
   h1 { font-size: 140%; }
 
   .logo {
+    display: block;
     margin: 30px 40%;
     text-align: center;
   }
@@ -595,7 +597,6 @@ select {
   }
 
   .step { margin-bottom: 25px; }
-  .step span { left: -20%; }
   .mobile-app img { width: 120px; }
 }
 /**********************************************************************************/
