Add jQuery 'Waypoints'

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,11 @@ header {
 
 .menu-item a:focus { outline: none; }
 /*--------------------------------------------------------------------------------*/
+/*Fixed navbar*/
+/*---------------------------------------------------------------------------------*/
+
+
+/*--------------------------------------------------------------------------------*/
 /*Heading*/
 /*-------------------------------------------------------------------------------*/
 .heading { margin-top: 120px; }
