Add scrolling animation

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,16 @@ h1 {
 h1 span {
   font-size: 120%;
 }
+
+/*=====================================*/
+/*Animation*/
+/*=====================================*/
+h1 { opacity: 0; }
+h1.animated { opacity: 1; }
+.heading .btn { opacity: 0; }
+.heading .btn.animated { opacity: 1; }
+/*=====================================*/
+
 /*-----------------------------------------------------------------------------*/
 /*Buttons*/
 /*------------------------------------------------------------------------------*/
@@ -223,6 +233,12 @@ h3 {
 .feature-description p {
   margin-top: 0;
 }
+/*=====================================*/
+/*Animation*/
+/*=====================================*/
+.feature-description { opacity: 0; }
+.feature-description.animated { opacity: 1; }
+/*=====================================*/
 
 /*-----------------------------------------------------------------------------*/
 /*FOOD PHOTOS*/
@@ -264,6 +280,13 @@ h3 {
 .iphone-img { text-align: center; }
 
 .iphone-img img { width: 40%; }
+
+/*=====================================*/
+/*Animation*/
+/*=====================================*/
+.iphone-img { opacity: 0; }
+.iphone-img.animated { opacity: 1; }
+/*=====================================*/
 
 .step-list ul {
   margin-left: 15px;
@@ -310,6 +333,12 @@ h3 {
   margin: 0 auto;
   box-shadow: 2px 2px 20px #000;
 }
+
+/*=====================================*/
+/*Animation*/
+/*=====================================*/
+.city { opacity: 0; }
+.city.animated { opacity: 1; }
 
 .black-box {
   margin-top: 30px;
