--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 /*HEADER*/
 /*-------------------------------------------------------------------------------*/
 header {
+  position: relative;
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/header-back.jpeg");
   background-size: cover;
@@ -29,28 +30,46 @@ header {
   margin: 0 auto;
 }
 
-.main-navigation {
-  position: relative;
-  display: flex;
-}
 
-.logo {
-  display: none;
-  width: 20%;
-  position: absolute;
-    top: 350px;
-  margin: 0 40%;
-  text-align: center;
-}
-
-.logo img {
-  display: inline-block;
-  width: 80px;
-  margin: 0 auto;
-}
 /*---------------------------------------------------------------------------------*/
 /*Menu*/
 /*--------------------------------------------------------------------------------*/
+.logo {
+  height: 100px;
+  width: auto;
+  margin-top: 20px;
+  float: left;
+}
+
+.menu {
+  display: none;
+  margin-top: 50px;
+  float: right;
+  list-style: none;
+}
+
+.menu-item {
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.menu-item a {
+  padding: 10px 0;
+  border-bottom: 1px solid transparent;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #fff;
+  transition: all .2s;
+}
+
+.menu-item a:hover {
+  border-bottom: 1px solid #ff9e28;
+  color: #ff9e28;
+
+}
+
+.menu-item a:focus { outline: none; }
+
 .menu-icon {
   width: 40px;
   height: 45px;
@@ -112,28 +131,7 @@ header {
   left: 50%;
 }
 
-.menu {
-  display: none;
-  position: absolute;
-  padding: 0;
-  list-style: none;
-}
 
-.menu-item { margin-bottom: 10px; }
-
-.menu-item a {
-  padding: 10px 0;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #fff;
-  transition: all .2s;
-}
-
-.menu-item a:hover {
-  color: #ff9e28;
-}
-
-.menu-item a:focus { outline: none; }
 /*--------------------------------------------------------------------------------*/
 /*Fixed navbar*/
 /*---------------------------------------------------------------------------------*/
@@ -142,7 +140,10 @@ header {
 /*--------------------------------------------------------------------------------*/
 /*Heading*/
 /*-------------------------------------------------------------------------------*/
-.heading { margin-top: 120px; }
+.heading {
+  position: absolute;
+    top: 30%;
+}
 
 h1 {
   text-transform: uppercase;
@@ -617,12 +618,6 @@ select {
 
   h1 { font-size: 140%; }
 
-  .logo {
-    display: block;
-    margin: 30px 40%;
-    text-align: center;
-  }
-
   .title { font-size: 100%; }
 
   .step-list ul {
@@ -718,43 +713,16 @@ select {
 /**********************************************************************************/
 @media only screen and (min-width: 960px) {
 
-  .menu-icon { display: none; }
-
-  .logo {
-    margin: 0;
-    position: static;
-  }
-
-  .logo img {
-    width: 100px;
-    margin-top: 20px;
-    float: left;
-  }
-
-  .main-navigation { display: flex; }
-
   .menu {
     display: block;
-    width: 80%;
-    margin-left: 20%;
-    text-align: right;
+    margin-top: 50px;
+    float: right;
+    list-style: none;
   }
 
   .menu-item {
     display: inline-block;
-    padding: 5px 15px;
-    margin-top: 30px;
-  }
-
-  .menu-item a {
-    padding: 15px 0;
-    border-bottom: 2px solid transparent;
-    transition: color .2s, border .2s;
-  }
-
-  .menu-item a:hover {
-    color: #ff9e28;
-    border-bottom: 1px solid #ff9e28;
+    margin-left: 40px;
   }
 
   h1 span {
